# google-cloud-serverless-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: deploy.ps1  deploy.sh  schema.json  test_cloud.py  test_local.py
src/: app.py  ocr.py  requirements.txt
src/templates/: dashboard.html
tests/: test_ocr.py
