[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gcp-serverless-document-pipeline"
version = "1.0.0"
description = "Event-driven serverless document processing pipeline on Google Cloud Platform"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Derrick Kipkoech"}
]
keywords = ["gcp", "serverless", "document-pipeline", "ocr", "cloud-run", "pubsub", "bigquery"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific Computing :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.0.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-bigquery>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]